--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "primera-entrega",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "sass style.scss css/style.css -w --no-source-map -s compressed"
   },
   "repository": {
     "type": "git",
@@ -18,5 +17,6 @@
   "bugs": {
     "url": "https://github.com/pablo-volonte/pablo-volonte/issues"
   },
-  "homepage": "https://github.com/pablo-volonte/pablo-volonte#readme"
+  "homepage": "https://github.com/pablo-volonte/pablo-volonte#readme",
+  "description": ""
 }
